--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,54 @@
 		        <artifactId>jackson-mapper-asl</artifactId>
 		        <version>1.9.13</version>
 		</dependency>
+		
+		<dependency> 
+			<groupId>org.aspectj</groupId> 
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.6</version> 
+		</dependency> 
+		
+		<dependency> 
+			<groupId>org.aspectj</groupId> 
+			<artifactId>aspectjweaver</artifactId> 
+			<version>1.8.6</version> 
+		</dependency>
+		
+		<!-- Spring AOP를 위한 라이브러리 -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-aop</artifactId>
+	        <version>${org.springframework-version}</version>
+	    </dependency>
+	    
+	    <!-- Spring Transaction을 위한 라이브러리 -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-tx</artifactId>
+	        <version>${org.springframework-version}</version>
+	    </dependency>
+		
+		<!-- 스프링 테스트 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		
+		<!-- 컨넥션 풀을 위한 라이브러리 -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		
+		 <!-- apache connection pool -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
 
 
 	
